--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+  </head>
 <body>
 <h1>Hey!</h1>
 <p>Welcome to my personal page</p>
