--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-  </head>
-<body>
-<h1>Hey!</h1>
-<p>Welcome to my personal page</p>
-</body>
-</html>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+	<h1>Hey!</h1>
+	<p>Welcome to my personal page</p>
+</div><!-- /.blurb -->
