--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 ---
 layout: default
-title: Aayush Agarwal
 ---
-<div class="blurb">
+<!-- ---
+layout: default
+title: Aayush Agarwal
+--- -->
+<!-- <div class="blurb">
 	<h1>Hey!</h1>
 	<p>Welcome to my personal page</p>
-</div><!-- /.blurb -->
+</div><!-- /.blurb --> 
