--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 ---
 layout: default
----
-<!-- ---
-layout: default
 title: Aayush Agarwal
---- -->
-<!-- <div class="blurb">
+---
+<div class="blurb">
 	<h1>Hey!</h1>
 	<p>Welcome to my personal page</p>
 </div><!-- /.blurb --> 
